Http handler in its own file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     links:
       - db:database
     volumes:
-      - .:/go/src/github.com/weebagency/go-api
-    working_dir: /go/src/github.com/weebagency/go-api/cmd/apisrv
+      - .:/go/src/github.com/weebagency/go-api-v2
+    working_dir: /go/src/github.com/weebagency/go-api-v2/cmd/apisrv
     # command: go run main.go
     command: fresh
   db:
